TheMightyDude (16 September 2012)
--------------------------------------
Fixed Parse error: syntax error, unexpected '.' in includes/ibank_consolidate2.php on line 102

TheKabal (15 September 2012)
--------------------------------------
Admin panel now accepts drop-in modules (create a valid php file in admin/, and it will appear as a choice in the admin menu)
Expanded news to include events for 100, 250, 500, and 1000 planets - thanks to Alex1981m @ http://forums.blacknova.net/viewtopic.php?f=15&t=479
Split admin into seperate files for each command/module
Translated all variables in admin
Merged l_team_ed & l_tdr_edit down to l_edit (now in the common section of language)
Added several variables (that are used in multiple files) into the common section of the language file
Removed comment about sector zero not being editable in preparation for moving Sol to sector one

TheMightyDude (15 September 2012)
--------------------------------------
Fixed PHP Notice: Undefined variable: level_factor in includes/calc_planet_torps.php on line 34
Fixed PHP Notice: Undefined variable: planetinfo in includes/planet_combat.php on multi lines.
Fixed PHP Notice: Undefined variable: l_planet_capture1 in includes/planet_combat.php on a couple of lines.
Fixed bug where you enter 1.2.3 as a repeat amount which resulted in using all your turns up.

TheMightyDude (11 September 2012)
--------------------------------------
Fixed PHP Warning: include(../footer.php): failed to open stream: No such file or directory in includes/traderoute_new.php on line 404
Fixed PHP Warning: include(): Failed opening '../footer.php' for inclusion (include_path='.') in includes/traderoute_new.php on line 404
Fixed bug where it doesn't display the complete link to capture a planet after you have attacked and won the battle.
Fixed PHP Notice: Undefined index: team in teams.php on line 638

TheMightyDude (10 September 2012)
--------------------------------------